# Vortex2D

./: .abstruse.yml  .appveyor.yml  .clang-format  .codecov.yml  .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  performance_measurements.txt
Docs/: CMakeLists.txt  Doxyfile  conf.py  fluidapirref.rst  generatePublishDocs.sh  index.rst  levelsets.rst  mainpage.h  rendererapiref.rst  rendering.rst  requirements.txt  rigidbody.rst  setup.rst  world.rst
Examples/: BallWaterExample.h  BaseExample.h  BuoyancyWaterExample.h  CMakeLists.txt  GLFW.cpp  GLFW.h  HydrostaticWaterExample.h  ObstacleSmokeExample.cpp  ObstacleSmokeExample.h  RenderExample.h  RenderWindow.cpp  RenderWindow.h  Rigidbody.cpp  Rigidbody.h  Runner.h  ScaleWaterExample.cpp  ScaleWaterExample.h  SmokeExample.cpp  SmokeExample.h  SmokeVelocityExample.h  VelocitySmokeExample.h  WaterExample.cpp  WaterExample.h  WaterFallExample.h  WatermillExample.h  WindmillWater.h  main.cpp
GLFW/: CMakeLists.txt  GLFW.cpp  GLFW.h  RenderWindow.cpp
PerfTests/: CMakeLists.txt  main.cpp
RenderWindow/: CMakeLists.txt  GLFW.cpp  RenderWindow.cpp  RenderWindow.h
Tests/: AdvectionTests.cpp  BoundariesTests.cpp  CMakeLists.txt  Common.h  DensityTests.cpp  ExtrapolateTests.cpp  Helpers.h  LevelSetTests.cpp  LinearSolverTests.cpp  PressureTests.cpp  RenderingTests.cpp  ShaderTests.cpp  Verify.h  WorldTests.cpp  main.cpp
Tests/Config/: dummy.xorg.conf
Tests/Engine/: AdvectionTests.cpp  BoundariesTests.cpp  DensityTests.cpp  ExtrapolateTests.cpp  LevelSetTests.cpp  LinearSolverTests.cpp  ParticleTests.cpp  PressureTests.cpp  RigidbodyTests.cpp  ShaderTests.cpp  VariationalHelpers.cpp  VariationalHelpers.h  WorldTests.cpp
Tests/Kernels/: Buffer.comp  Checkerboard.comp  Copy.comp  Image.comp  ImageFloat.comp  Stencil.comp  Work.comp  WorkIndirect.comp
Tests/Renderer/: ComputeTests.cpp  RenderingTests.cpp  ShapeDrawer.cpp  ShapeDrawer.h  ShapeTests.cpp
Tests/variationalplusgfm/: array2_utils.h  fluidsim.cpp  fluidsim.h  util.h
Tests/variationalplusgfm/pcgsolver/: blas_wrapper.h  pcg_solver.h
Vortex/: CMakeLists.txt  Vortex.h
Vortex/Engine/: Advection.cpp  Advection.h  Boundaries.cpp  Boundaries.h  Cfl.cpp  Cfl.h  Density.cpp  Density.h  Extrapolation.cpp  Extrapolation.h  LevelSet.cpp  LevelSet.h  Particles.cpp  Particles.h  PrefixScan.cpp  PrefixScan.h  Pressure.cpp  Pressure.h  Rigidbody.cpp  Rigidbody.h  Velocity.cpp  Velocity.h  World.cpp  World.h
Vortex/Engine/Kernels/: AdvectParticles.comp  AdvectVelocity.comp  BuildDiv.comp  BuildMatrix.comp  CircleDist.frag  CommonAdvect.comp  CommonInterpolate.comp  CommonParticles.comp  CommonProject.comp  CommonRigidbody.comp  ConstrainRigidbodyVelocity.comp  ConstrainVelocity.comp  DebugDataCopy.comp  DistanceField.frag  DualContour.comp  Extrapolate.comp  ExtrapolateVelocity.comp  MeshReindexing.comp  ParticleBucket.comp  ParticleClamp.comp  ParticleCount.comp  ParticlePhi.comp  ParticleSpawn.comp  ParticleToGrid.comp  PolygonDist.frag  PreScan.comp  PreScanAdd.comp  PreScanStoreSum.comp  Project.comp  QEF.comp  RigidbodyForce.comp  ShrinkWrap.comp  VelocityDifference.comp  VelocityMax.comp
Vortex/Engine/LinearSolver/: ConjugateGradient.cpp  ConjugateGradient.h  Diagonal.cpp  Diagonal.h  GaussSeidel.cpp  GaussSeidel.h  IncompletePoisson.cpp  IncompletePoisson.h  Jacobi.cpp  Jacobi.h  LinearSolver.cpp  LinearSolver.h  Multigrid.cpp  Multigrid.h  Preconditioner.h  Reduce.cpp  Reduce.h  Transfer.cpp  Transfer.h
Vortex/Renderer/: BindGroup.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Common.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Drawable.h  Gpu.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  RenderState.cpp  RenderState.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderWindow.cpp  RenderWindow.h  Shapes.cpp  Shapes.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Transformable.h  Work.cpp  Work.h
Vortex/Renderer/Kernels/: Ellipse.frag  Ellipse.vert  IntPosition.frag  Position.frag  Position.vert  TexturePosition.frag  TexturePosition.vert
Vortex/Renderer/Vulkan/: BindGroup.cpp  Buffer.cpp  CommandBuffer.cpp  Device.cpp  Device.h  Instance.cpp  Instance.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTexture.cpp  RenderWindow.cpp  Texture.cpp  Timer.cpp  Vulkan.h  vk_mem_alloc.h
Vortex/Renderer/WebGPU/: BindGroup.cpp  Buffer.cpp  CommandBuffer.cpp  Device.cpp  Device.h  Instance.cpp  Instance.h  RenderTarget.cpp  RenderTexture.cpp  RenderWindow.cpp  Texture.cpp  Timer.cpp  WebGPU.h
Vortex/SPIRV/: Reflection.cpp  Reflection.h  ShaderLayout.cpp  ShaderLayout.h
Vortex/Utils/mapbox/: variant.hpp
Vortex2D/: CMakeLists.txt  Vortex2D.h
Vortex2D/Engine/: Advection.cpp  Advection.h  Boundaries.cpp  Boundaries.h  Buffer.cpp  Buffer.h  Cfl.cpp  Cfl.h  Density.cpp  Density.h  Engine.cpp  Engine.h  Extrapolation.cpp  Extrapolation.h  HelperFunctions.h  LevelSet.cpp  LevelSet.h  LineIntegralConvolution.cpp  LineIntegralConvolution.h  Operator.h  Particles.cpp  Particles.h  PrefixScan.cpp  PrefixScan.h  Pressure.cpp  Pressure.h  Rigidbody.cpp  Rigidbody.h  Size.cpp  Size.h  Velocity.cpp  Velocity.h  Water.cpp  Water.h  World.cpp  World.h
Vortex2D/Engine/Kernels/: Advect.comp  BuildDiv.comp  (+46 more)
Vortex2D/Examples/: main.cpp
Vortex2D/Renderer/: BindGroup.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Common.h  Data.cpp  Data.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Disable.h  Drawable.h  Instance.cpp  Instance.h  Operator.h  Pipeline.cpp  Pipeline.h  Quad.cpp  Quad.h  Reader.cpp  Reader.h  Reflection.cpp  Reflection.h  RenderState.cpp  RenderState.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderWindow.cpp  RenderWindow.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Sprite.cpp  Sprite.h  State.cpp  (+12 more)
Vortex2D/SPIRV/: Reflection.cpp  Reflection.h  ShaderLayout.cpp  ShaderLayout.h
Vortex2D/Utils/: vk_mem_alloc.h
VulkanGLFW/: CMakeLists.txt  RenderWindow.cpp  glfw.cpp  glfw.h
(+250 files in other folders)
